tests/errors/unsatisfied-guar.expect
---STDERR---
error: Cannot prove constraint G+3 >= G+4
   ┌─ tests/errors/unsatisfied-guar.fil:11:3
   │
11 │   out = m0.out;
   │   ^^^^^^^^^^^^^
   │   │
   │   Source is available for [G+2, G+3]
   │   Destination's requirement [G+3, G+4]

